Fixed fontSize on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,12 @@
 	font-size: 0.8rem;
 }
 
+@media screen and (max-width: 768px) {
+	* {
+		font-size: 1rem;
+	}
+}
+
 *::-webkit-scrollbar-track
 {
 	background-color: transparent;
